Tue May 22 17:10:35 2001  K.Kosako  <kosako@sofnec.co.jp>

	* variable.c (rb_alias_variable): should not allow variable
	  aliasing if $SAFE >= 4.

Mon May 21 15:26:05 JST 2001  Keiju Ishitsuka <keiju@ishitsuka.com>

	* lib/irb/multi-irb.rb: delete japanese messages.

Mon May 21 13:15:25 2001  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* bignum.c (rb_big2str): t should be protected from GC.

Sun May 20 00:28:43 2001  Akinori MUSHA  <knu@iDaemons.org>

	* ext/socket/extconf.rb: do not clobber $CFLAGS when setting
	  -DSOCKS.

Fri May 18 05:42:28 2001  Akinori MUSHA  <knu@iDaemons.org>

	* lib/thread.rb: rescue ThreadError in case the thread is dead
	  just before calling Thread#run.

Fri May 18 05:29:21 2001  Akinori MUSHA  <knu@iDaemons.org>

	* lib/mkmf.rb (xsystem): make a temporary fix to get $(...) macros
	  properly expanded on a command execution.

Fri May 18 03:49:55 2001  Brian F. Feldman  <green@FreeBSD.org>

	* lib/mkmf.rb: unbreak "make install".  lib/* must be installed
	  under $rubylibdir, not under $libdir.

Thu May 17 19:36:47 2001  Akinori MUSHA  <knu@iDaemons.org>

	* lib/shell.rb, lib/shell/process-controller.rb,
	  lib/shell/command-processor.rb: translate Japanese comments into
	  English.

	* doc/shell.rd.jp: RD'ify and make some fixes.

	* doc/shell.rd: RD'ify, delete Japanese leftovers, make overall
	  English fixes, and sync with doc/shell.rd.jp.

Thu May 17 19:34:11 2001  Akinori MUSHA  <knu@iDaemons.org>

	* doc/shell.rd*, lib/shell*: bring shell.rb 0.6 onto the ruby_1_6
	  branch.

Thu May 17 17:35:04 2001  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* eval.c (rb_call0): address of local_vars might change during eval.

Thu May 17 07:30:15 2001  Akinori MUSHA  <knu@iDaemons.org>

	* ext/md5/md5.txt, ext/md5/md5.txt.jp: s/SuperClass/Superclass/.

Thu May 17 06:37:14 2001  Akinori MUSHA  <knu@iDaemons.org>

	* ext/md5/md5.txt: make wording fixes.

	* ext/md5/md5.txt.jp: ditto.

Thu May 17 05:23:52 2001  Keiju Ishitsuka <keiju@ishitsuka.com>